feat(organization): add person profiles and references
